# lambda-ski

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  LICENSE.md  README.md  lambda-ski.cabal  stack.yaml
app/: HelloSki.hs  Main.hs  Repl.hs
helloworld/: hello.hs  hello.js  hello.py  hello.rb
scripts/: generate-hello-worlds
src/: Convert.hs  DeBruijn.hs  ExamplePrograms.hs  Lib.hs  Marshal.hs  Nominal.hs  Orphans.hs  QuasiQuoter.hs  Ski.hs
test/: Test-Old.hs  Test.hs
